--- a/src/components/cashier/cashier.component.html
+++ b/src/components/cashier/cashier.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-  <div class="flex-1 overflow-hidden">
+  <div class="flex-1 overflow-y-auto md:overflow-hidden">
     @if (isLoading()) {
       <div class="flex items-center justify-center h-full">
         <div class="animate-spin rounded-full h-16 w-16 border-b-2 border-blue-500"></div>
